--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
   },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "parser": "babel-eslint",
   "rules": {
@@ -13,8 +14,14 @@
     "strict": [2, "never"],
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
-    "react/react-in-jsx-scope": 2
+    "react/react-in-jsx-scope": 2,
+    "semi": [
+            2,
+            "always"
+        ]
   },
+  
+        
   "plugins": [
     "react"
   ]
