--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
-    "eslint-plugin-react": "^3.6.2",
+    "eslint-plugin-react": "^3.11.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "firebase": "^2.3.2",
+    "lodash": "^3.10.1",
     "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "reactfire": "^0.5.1"
   }
 }
